--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
+        "phpoffice/phpspreadsheet": "^1.17",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
