--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "google/apiclient": "^2.7",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
+        "nao-pon/flysystem-google-drive": "~1.1",
         "phpoffice/phpspreadsheet": "^1.17",
         "yoeunes/toastr": "^1.2"
     },
